# bluejay-client

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.circleci/: config.yml
bluejay/: __init__.py  client.py  event.py
bluejay/backend/: __init__.py  sns.py
tests/backend/: test_encode.py
tests/backend/sns/: conftest.py  test_compression.py  test_sending.py
